@@ -1,73 +1,30 @@
 {
   "localizedName": "Creneau",
   "description": "Medium range defence turret.",
-  "details": "First tier turret use of ammunition. More efficient use of defence parts as ammunition.",
+  "details": "Second tier turret use of ammunition. Use of defence parts as ammunition only.",
   "type": "itemTurret",
   "health": 150,
   "size": 2,
 
   "targetAir": false,
   "targetGround": true,
-  "reload": 7.5,
-  "shots": 2,
+  "reload": 25,
   "range": 175,
   "inaccuracy": 0,
   "shootSound": "bang",
-
+  "shoot": {
+    "shots": 2
+  },
+  
   "ammoTypes": {
-    "tin": {
-      "type": "ArtilleryBulletType",
-      "speed": 2.5,
-      "lifetime": 62.5,
-      "damage": 15,
-      "width": 1,
-      "height": 1,
-      "buildingDamageMultiplier": 0.01,
-      "ammoMultiplier": 2,
-      "splashDamage": 5,
-      "splashDamageRadius": 20
-    },
-    "silicon": {
-      "type": "ArtilleryBulletType",
-      "speed": 2.5,
-      "lifetime": 62.5,
-      "damage": 20,
-      "width": 2,
-      "height": 4,
-      "buildingDamageMultiplier": 0.01,
-      "ammoMultiplier": 1,
-
-      "homingPower": 0.01,
-      "splashDamage": 6.5,
-      "splashDamageRadius": 20
-    },
-    "coal": {
-      "type": "ArtilleryBulletType",
-      "speed": 2.5,
-      "lifetime": 62.5,
-      "damage": 15,
-      "width": 3,
-      "height": 3,
-      "buildingDamageMultiplier": 0.01,
-      "ammoMultiplier": 1,
-
-      "status": "burning",
-      "makeFire": true,
-      "splashDamage": 5,
-      "splashDamageRadius": 20
-    },
     "d-part": {
-      "type": "ArtilleryBulletType",
       "speed": 2.5,
       "lifetime": 70,
-      "damage": 55,
+      "damage": 45,
       "width": 1,
       "height": 1,
       "buildingDamageMultiplier": 0.01,
-      "ammoMultiplier": 5,
-
-      "splashDamage": 25,
-      "splashDamageRadius": 20
+      "ammoMultiplier": 10
     }
   },
 
