@@ -5,7 +5,7 @@
   "health": 260,
   "size": 2,
   "requirements": [
-    "tin/3"
+    "tin/2"
   ],
 
   "category": "defense",
