@@ -2,7 +2,7 @@
   "localizedName": "Large Platinum Wall",
   "description": "A solid wall that reflects some bullets.",
   "type": "wall",
-  "health": 4000,
+  "health": 2500,
   "size": 2,
   "chanceDeflect": 6,
   "requirements": [
